// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render <Logo/> properly with "big" props passed 1`] = `
<a
  aria-current="page"
  class="Logo__Wrapper-sc-1rn1h4h-0 dolZbF active"
  href="/"
  theme="[object Object]"
>
  <span
    class="Logo__First-sc-1rn1h4h-1 hEJaW"
  >
    P
  </span>
  antry
</a>
`;

exports[`Render <Logo/> properly with default props without provider 1`] = `
<a
  aria-current="page"
  class="Logo__Wrapper-sc-1rn1h4h-0 iLZenY active"
  href="/"
  theme="[object Object]"
>
  <span
    class="Logo__First-sc-1rn1h4h-1 hEJaW"
  >
    P
  </span>
  antry
</a>
`;
